[package]
name = "ray"
version = "0.1.0"
authors = ["Joseph Ryan <josephryan3.14@gmail.com>"]
edition = "2018"

[lib]
name = "ray"
path = "src/lib.rs"

[dependencies]
image = "0.21.0"
itertools = "0.8.0"
rand = "0.6.3"
rayon = "1.0.3"
termion = "1.5.1"
lazy_static = "1.2.0"
tobj = "0.1.6"
serde = "1.0.89"

[profile.release]
debug = true

[features]
default = ["hdr_output"]
hdr_output = []
single_thread = []

[dev-dependencies]
criterion = "0.2"

[[bench]]
name = "benko"
harness = false
